[gd_scene format=3 uid="uid://18o5rsy48opw"]

[ext_resource type="Script" uid="uid://djy7nu0qyodc8" path="res://scenes/community.gd" id="1_0pwr5"]
[ext_resource type="PackedScene" uid="uid://uowi3g6syltd" path="res://objects/building.tscn" id="1_cpjqo"]
[ext_resource type="PackedScene" uid="uid://be00j8kley42i" path="res://objects/ui/building_menu.tscn" id="3_qtjoh"]

[node name="Community" type="Node2D" unique_id=1450293807]
script = ExtResource("1_0pwr5")

[node name="building" parent="." unique_id=978927594 instance=ExtResource("1_cpjqo")]
position = Vector2(315, 549)
scale = Vector2(0.5, 0.5)
type = 1
plot_spot = "community_1"
h_frames = 4

[node name="Label" type="Label" parent="building" unique_id=131897313]
offset_left = -92.0
offset_top = 280.0
offset_right = 5.0
offset_bottom = 303.0
text = "Community Plot 1"

[node name="building2" parent="." unique_id=2069267527 instance=ExtResource("1_cpjqo")]
position = Vector2(992, 545)
scale = Vector2(0.5, 0.5)
type = 0
plot_spot = "shelter_2"
h_frames = 4

[node name="Label2" type="Label" parent="building2" unique_id=520538627]
offset_left = -72.0
offset_top = 288.0
offset_right = 25.0
offset_bottom = 311.0
text = "House plot 2"

[node name="building4" parent="." unique_id=1306243225 instance=ExtResource("1_cpjqo")]
position = Vector2(179, 336)
scale = Vector2(0.5, 0.5)
type = 0
plot_spot = "shelter_1"
h_frames = 4

[node name="Label2" type="Label" parent="building4" unique_id=1658589765]
offset_left = -72.0
offset_top = 288.0
offset_right = 25.0
offset_bottom = 311.0
text = "House plot 1"

[node name="building3" parent="." unique_id=1980572673 instance=ExtResource("1_cpjqo")]
position = Vector2(660, 557)
scale = Vector2(0.5, 0.5)
type = 2
plot_spot = "farm_1"
h_frames = 4
v_frames = 3

[node name="Label3" type="Label" parent="building3" unique_id=967455900]
offset_left = -50.0
offset_top = 280.0
offset_right = 47.0
offset_bottom = 303.0
text = "Farm field 1"

[node name="alert_label" type="Label" parent="." unique_id=534927065]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
offset_left = 505.0
offset_top = 93.0
offset_right = 755.0
offset_bottom = 116.0
horizontal_alignment = 1

[node name="resourceBox" type="Control" parent="." unique_id=705032318]
layout_mode = 3
anchors_preset = 0
offset_left = 147.0
offset_top = 119.0
offset_right = 187.0
offset_bottom = 159.0

[node name="VBoxContainer" type="VBoxContainer" parent="resourceBox" unique_id=1075678861]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="dayContainer" type="HBoxContainer" parent="resourceBox/VBoxContainer" unique_id=2037094975]
layout_mode = 2

[node name="Label" type="Label" parent="resourceBox/VBoxContainer/dayContainer" unique_id=1552329364]
layout_mode = 2
text = "   DAY "

[node name="day" type="Label" parent="resourceBox/VBoxContainer/dayContainer" unique_id=314715029]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="resourceBox/VBoxContainer" unique_id=947057169]
layout_mode = 2
text = "Resource Inventory"
horizontal_alignment = 1

[node name="woodContainer" type="HBoxContainer" parent="resourceBox/VBoxContainer" unique_id=646696767]
layout_mode = 2

[node name="Label" type="Label" parent="resourceBox/VBoxContainer/woodContainer" unique_id=1803957441]
layout_mode = 2
text = "   Wood: "

[node name="wood" type="Label" parent="resourceBox/VBoxContainer/woodContainer" unique_id=911169076]
unique_name_in_owner = true
layout_mode = 2

[node name="stoneContainer" type="HBoxContainer" parent="resourceBox/VBoxContainer" unique_id=1794738820]
layout_mode = 2

[node name="Label" type="Label" parent="resourceBox/VBoxContainer/stoneContainer" unique_id=752685816]
layout_mode = 2
text = "   Stone: "

[node name="stone" type="Label" parent="resourceBox/VBoxContainer/stoneContainer" unique_id=1218859755]
unique_name_in_owner = true
layout_mode = 2

[node name="laborContainer" type="HBoxContainer" parent="resourceBox/VBoxContainer" unique_id=914750037]
layout_mode = 2

[node name="Label" type="Label" parent="resourceBox/VBoxContainer/laborContainer" unique_id=1391892855]
layout_mode = 2
text = "   Labor: "

[node name="labor" type="Label" parent="resourceBox/VBoxContainer/laborContainer" unique_id=13352834]
unique_name_in_owner = true
layout_mode = 2

[node name="Timer" type="Timer" parent="." unique_id=84645096]
one_shot = true

[node name="Button" type="Button" parent="." unique_id=1497276818]
offset_left = 911.0
offset_top = 23.0
offset_right = 919.0
offset_bottom = 31.0
text = "new day"

[node name="BuildingMenu" parent="." unique_id=2115674862 instance=ExtResource("3_qtjoh")]
offset_left = 480.0
offset_top = 65.0
offset_right = 480.0
offset_bottom = 65.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
